AM_CFLAGS = -std=c99 -Wall -pedantic
AM_CPPFLAGS = \
	-D_XOPEN_SOURCE=600 \
	-DNON_UNIX_STDIO

lib_LIBRARIES = \
	libi77.a

noinst_HEADERS = \
	close.h \
	dfe.h \
	due.h \
	endfile.h \
	err.h \
	f2c.h \
	fio.h \
	fmt.h \
	fp.h \
	iio.h \
	lio.h \
	local.h \
	lread.h \
	open.h \
	rdfmt.h \
	sfe.h \
	sue.h \
	uio.h \
	util.h \
	wref.h \
	wrtfmt.h \
	wsfe.h \
	wsne.h

libi77_a_SOURCES = \
	backspace.c \
	close.c \
	dfe.c \
	due.c \
	endfile.c \
	err.c \
	f2cstart.c \
	fc77.c \
	fmt.c \
	fmtlib.c \
	iio.c \
	inquire.c \
	lio.c \
	lread.c \
	open.c \
	rdfmt.c \
	rewind.c \
	rsfe.c \
	rsne.c \
	sfe.c \
	sue.c \
	uio.c \
	util.c \
	Version.c \
	wref.c \
	wrtfmt.c \
	wsfe.c \
	wsne.c
